<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaNaves">

    <Button
        android:id="@+id/btnDarAltaNaves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DarDeAlta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <EditText
        android:id="@+id/etxtMatriculaNaveAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/PistaMatricula"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/txtTituloAltaNaves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TituloAltaNaves"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <RadioGroup
        android:id="@+id/rgTipoNaves"
        android:layout_width="127dp"
        android:layout_height="158dp"
        android:checkedButton="@id/rbtnBombarderos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431">

        <RadioButton
            android:id="@+id/rbtnBombarderos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bombardero" />

        <RadioButton
            android:id="@+id/rbtnCazas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Caza" />

        <RadioButton
            android:id="@+id/rbtnTransporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Transporte" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtTipoNave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextoTipoDeNave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <CheckBox
        android:id="@+id/chkBoxCarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PuedeLlevarCargamento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <CheckBox
        android:id="@+id/chkBoxPasajeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PuedeLlevarPasajeros"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

    <Button
        android:id="@+id/btnCancelarAltaNaves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <ImageView
        android:id="@+id/imagenNave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>