<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ajustes">

    <TextView
        android:id="@+id/txtTema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoTema"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="223dp"
        android:layout_height="63dp"
        android:checkedButton="@id/rbtnTemaClaro"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41">

        <RadioButton
            android:id="@+id/rbtnTemaClaro"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/textoTemaClaro" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rbtnTemaOscuro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/textoTemaOscuro" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>